app now displays the rankings

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<footer>
+    <a href="https://github.com/RyanMontville/actual-olympic-medals-ranking/tree/main">View the Github Repo</a>
+    <a href="https://ryanmontville.com/">View the rest of my portfolio</a>
+</footer>
