--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<nav>
+    <a href="https://ryanmontville.com/">RyanMontville.com</a>
+    <a href="https://github.com/RyanMontville/actual-olympic-medals-ranking/tree/main">View the Github Repo</a>
+</nav>
+<header>
+    <h1>The Actual Olympic Medals Ranking</h1>
+    <img src="https://raw.githubusercontent.com/RyanMontville/actual-olympic-medals-ranking/main/images/Olympic_Rings.png" alt="Olymic Rings" class="rings" />
+</header>
