--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,7 +7,10 @@ table {
     width: 100%;
     border-collapse: collapse;
     padding: 50px;
-    background-color: var(--main-background-color);
+    background-color: var(--table-backgroud);
+    border-radius: 30px;
+    border-style: hidden; /* hide standard table (collapsed) border */
+    box-shadow: 0 0 0 1px var(--table-backgroud); /* this draws the table border  */
 }
 
 td {
@@ -15,7 +18,7 @@ td {
 }
 
 th {
-    padding: 10px;
+    padding: 20px 10px 10px 10px;
 }
 .align-left {
     text-align: left;
