--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --body-background-color: #000;
+        --body-background-color: #1a1a1a;
         --body-color: #ccc;
         --main-background-color: #2e2e2e;
         --link-color: #69b3ff;
