fixing error in csv

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,6 @@
 <footer>
-    <a href="https://github.com/RyanMontville/actual-olympic-medals-ranking/tree/main">View the Github Repo</a>
     <a href="https://ryanmontville.com/">View the rest of my portfolio</a>
+    <a href="https://github.com/RyanMontville/actual-olympic-medals-ranking/tree/main">View the Github Repo</a>
+    <a href="https://www.kaggle.com/datasets/piterfm/paris-2024-olympic-summer-games">Data source</a>
+    <a href="https://flagsapi.com/">Flag source</a>
 </footer>
