updating all_medals csv

--- a/src/app/country-medals/country-medals.component.html
+++ b/src/app/country-medals/country-medals.component.html
@@ -3,7 +3,7 @@
         <tr>
             <td>{{medal.medalDate}}</td>
             <td>{{medal.medalistName}}</td>
-            <td>{{medal.sport}} - {{medal.event}}</td>
+            <td>{{medal.event}}</td>
             <td class="align-center">{{medal.medalCode}}{{medal.numAthletes}}</td>
         </tr>
     }
