uploading curretn progress on athele info

--- a/src/app/athlete-detail/athlete-detail.component.html
+++ b/src/app/athlete-detail/athlete-detail.component.html
@@ -1,1 +1,11 @@
-<p>athlete-detail works!</p>
+<div id="athlete-header">
+    <p>{{athleteInfo.athleteName}}</p>
+    <p>🥇: {{athleteInfo.goldCount}}</p>
+    <p>🥈: {{athleteInfo.silverCount}}</p>
+    <p>🥉: {{athleteInfo.bronzeCount}}</p>
+    <span class="material-symbols-outlined close-button" (click)="OnClose()">close</span>
+</div>
+
+@for (medal of medalsForAthlete; track medal) {
+    <p>{{medal.medalDate}} - {{medal.eventName}} - {{medal.medalEmoji}}</p>
+}
