--- a/src/app/country-medals/country-medals.component.html
+++ b/src/app/country-medals/country-medals.component.html
@@ -2,9 +2,19 @@
     @for (medal of medalsForCountry; track medal) {
         <tr>
             <td>{{medal.medalDate}}</td>
-            <td>{{medal.medalistName}}</td>
+            @if(isAthlete(medal.medalistName)) {
+                <td (click)="showAthletePopUp(medal.medalistName)" class="link">{{medal.medalistName}}</td>
+            }
+            @if(!isAthlete(medal.medalistName)) {
+                <td>{{medal.medalistName}}</td>
+            }
             <td>{{medal.event}}</td>
             <td class="align-center">{{medal.medalCode}}{{medal.numAthletes}}</td>
         </tr>
+    }
+    @if (shouldOpenPopup) {
+        <div id="popup-wrapper">
+            <app-athlete-detail [athleteName]="nameForPopup" class="popup" (closePopup)="shouldClosePopUp($event)"/>
+        </div>
     }
 </table>
