--- a/src/app/country-medals/country-medals.component.html
+++ b/src/app/country-medals/country-medals.component.html
@@ -8,13 +8,19 @@
             @if(!isAthlete(medal.medalistName)) {
                 <td>{{medal.medalistName}}</td>
             }
-            <td>{{medal.event}}</td>
+            <td (click)="showEventPopUp(medal.eventID)" class="link">{{medal.event}}</td>
             <td class="align-center">{{medal.medalCode}}{{medal.numAthletes}}</td>
         </tr>
     }
-    @if (shouldOpenPopup) {
+    @if (shouldOpenAthletePopup) {
         <div id="popup-wrapper">
             <app-athlete-detail [athleteName]="nameForPopup" class="popup" (closePopup)="shouldClosePopUp($event)"/>
+        </div>
+    }
+
+    @if (shouldOpenEventPopup) {
+        <div id="popup-wrapper">
+            <app-event-detail [eventID]="eventForPopup" class="popup" (closePopup)="shouldClosePopUp($event)"/>
         </div>
     }
 </table>
