making improvements to athlete popup

--- a/src/app/athlete-detail/athlete-detail.component.html
+++ b/src/app/athlete-detail/athlete-detail.component.html
@@ -4,6 +4,7 @@
 
 @if (!loading) {
     <div id="athlete-header">
+        <img [src]="athleteInfo.flagUrl" [alt]="athleteInfo.country" />
         <p>Medals for {{athleteInfo.athleteName}}</p>
         <p>🥇: {{athleteInfo.goldCount}}</p>
         <p>🥈: {{athleteInfo.silverCount}}</p>
