--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -17,6 +17,12 @@ td {
     padding: 0 10px;
 }
 
+.country-and-flag {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
 th {
     padding: 20px 10px 10px 10px;
 }
@@ -43,4 +49,10 @@ tr:not(:last-child) {
     .desktop {
         display: none;
     }
+}
+
+.link {
+    color: var(--link-color);
+    text-decoration: underline;
+    cursor: pointer;
 }
